# ideas

./: .gitignore  .travis.yml  CHANGELOG.txt  CREDITS.txt  Makefile  Makefile.incl  NOTICE.txt  README.md  README.txt  ideas.cabal  report.html  stack.yaml
doc/: Makefile
doc/exercises/: Makefile  logic.fmt  relationalg.fmt
doc/haddock/: prologue
docs/: Makefile  ideas.css
docs/examples/: algebra.equations.linear.balance.xml  algebra.equations.linear.txt  algebra.equations.linear.xml  algebra.equations.polynomial.txt  algebra.equations.polynomial.xml  algebra.equations.quadratic.txt  algebra.equations.quadratic.xml  math.sum.xml  number.mixed-fraction-nf.xml  number.rational.xml
docs/exercises/: Makefile
scripts/: logic.txt  math.lineq-en.txt  math.polyeq-en.txt  math.quadreq-en.txt
src/: Main.hs  Move.hs  Transformation.hs  Unification.hs
src/Common/: AbstractService.hs  Apply.hs  Argument.hs  Assignment.hs  Binding.hs  Checks.hs  Classes.hs  Context.hs  Derivation.hs  DerivationTree.hs  Environment.hs  Exercise.hs  Focus.hs  Grammar.hs  History.hs  Id.hs  Interpreter.hs  Library.hs  Logging.hs  Main.hs  Move.hs  Navigator.hs  Parameterized.hs  Parsing.hs  Predicate.hs  RegExp.hs  Results.hs  Rewriting.hs  Rule.hs  Strategy.hs  StringRef.hs  TestSuite.hs  Transformation.hs  Traversable.hs  Unification.hs  Uniplate.hs  Utils.hs  View.hs
src/Documentation/: Checks.hs  DefaultPage.hs  EqualityPage.hs  ExampleFile.hs  ExercisePage.hs  LatexRules.hs  Make.hs  OpenMathDerivations.hs  OverviewPages.hs  RulePage.hs  RulePresenter.hs  SelfCheck.hs  ServicePage.hs  TestsPage.hs  ViewPage.hs
src/Domain/: Derivative.hs  Fraction.hs  Lambda.hs  LinearAlgebra.hs  Logic.hs  Programming.hs  RelationAlgebra.hs  SKI.hs
src/ExerciseAssistant/: exerciseassistant.gladep
src/Ideas/: Main.hs
src/Logic/: Parser.hs
src/Main/: ExerciseList.hs  IDEAS.hs  LoggingDatabase.hs  Options.hs
src/Matrix/: Context.hs  Equation.hs  Parser.hs  Strategies.hs
src/Network/: CGI.hs
src/OpenMath/: ContentDictionary.hs  Conversion.hs  Exercises.hs  Interactive.hs  LAServer.hs  LAService.hs  Main.hs  Makefile  OMToMatrix.hs  Object.hs  ObjectParser.hs  OpenMath.dtd  OpenMath.hs  README  Reply.hs  Request.hs  StrategyTable.hs  StrategyToWiki.hs  XML.hs  twoxtwomatrix.xml
src/Presentation/: index.nl.php  index.php
src/Service/: AbstractService.hs  ActiveMathService.hs  AnswerSet.hs  BasicServices.hs  Definitions.hs  Diagnose.hs  DomainReasoner.hs  EditDistance.hs  Evaluator.hs  ExerciseList.hs  ExercisePackage.hs  FeedbackScript.hs  FeedbackText.hs  HTML.hs  JSON.hs  LogAnalysis.hs  LoggingDatabase.hs  Main.hs  MathBridgeExerciseInfo.hs  ModeJSON.hs  ModeXML.hs  Omdoc.hs  OpenMathSupport.hs  Options.hs  ProblemDecomposition.hs  Progress.hs  Request.hs  RulesInfo.hs  RunScript.hs  ScriptParser.hs  SearchSpace.hs  ServiceList.hs  State.hs  StrategyInfo.hs  Submit.hs  TypedAbstractService.hs  TypedExample.hs  Types.hs  XML.hs
src/Text/: HTML.hs  JSON.hs  Parsing.hs  Scanning.hs  UTF8.hs  XML.hs
test/: Makefile
test/corner-cases/: allfirsts-dups.exp  allfirsts-dups.xml  assoc1.exp  assoc1.json  assoc2.json  assoc3.exp  assoc3.json  assoc4.json  assoc5.exp  assoc5.json  assoc6.exp  assoc6.json  balance-nosmartdiv.exp  balance-nosmartdiv.xml  balance-notvartoright.exp  balance-notvartoright.xml  bigderivation.exp  bigderivation.json  bigsteps.exp  bigsteps.json  bigsubmit.exp  bigsubmit.json  bothfactors-abc.exp  bothfactors-abc.xml  calculate-sqrt.exp  calculate-sqrt.xml  cleanup-bug.exp  cleanup-bug.xml  common-divisor.exp  common-divisor.xml  common-factor.exp  common-factor.xml  convert-float.exp  convert-float.xml  derivation-dwo.exp  derivation-dwo2.exp  derivation-dwo3.exp  derivation-dwo4.exp  derivation-dwo4.xml  derivation-dwo5.exp  (+45 more)
test/dwo-buggy/: polynomial1.exp  polynomial1.xml  polynomial10.exp  polynomial10.xml  polynomial11.xml  polynomial12.xml  polynomial13.exp  polynomial13.xml  polynomial14.exp  polynomial14.xml  polynomial15.txt  polynomial15.xml  polynomial16.exp  polynomial16.xml  polynomial17.exp  polynomial17.xml  polynomial18.exp  polynomial18.xml  polynomial19.exp  polynomial19.xml  polynomial2.exp  polynomial2.xml  polynomial20.exp  polynomial20.xml  polynomial21.exp  polynomial21.xml  polynomial22.exp  polynomial22.xml  polynomial23.exp  polynomial23.xml  polynomial24.xml  polynomial25.xml  polynomial26.exp  polynomial26.xml  polynomial27.txt  polynomial27.xml  polynomial28.exp  polynomial28.xml  polynomial29.exp  polynomial29.xml  (+82 more)
test/dwo-derivations/: math.calcpower14.xml  math.calcpower16.xml  math.calcpower18.xml  math.calcpower21.xml  math.calcpower25.xml  math.calcpower3.xml  math.calcpower36.xml  math.calcpower4.xml  math.calcpower43.xml  math.calcpower46.xml  math.calcpower48.xml  math.calcpower9.xml  math.factor1.exp  math.factor1.xml  math.factor2.exp  math.factor2.xml  math.factor3.exp  math.factor3.xml  math.factor4.exp  math.factor4.xml  math.factor5.exp  math.factor5.xml  math.factor6.exp  math.factor6.xml  math.factor7.exp  math.factor7.xml  math.factor8.exp  math.factor8.xml  math.higherdegree1.exp  math.higherdegree1.xml  math.higherdegree10.exp  math.higherdegree10.xml  math.higherdegree11.exp  math.higherdegree11.xml  math.higherdegree12.exp  math.higherdegree12.xml  math.higherdegree13.exp  math.higherdegree13.xml  math.higherdegree14.exp  math.higherdegree14.xml  (+767 more)
test/json-rpc/: allfirsts.exp  allfirsts.json  applicable.exp  applicable.json  apply.exp  apply.json  assoc1.exp  assoc1.json  assoc2.exp  assoc2.json  assoc3.exp  assoc3.json  assoc4.json  assoc5.exp  assoc5.json  assoc6.exp  assoc6.json  bigderivation.exp  bigderivation.json  bigsteps.exp  bigsteps.json  bigsubmit.exp  bigsubmit.json  buggyrule-submit.exp  buggyrule-submit.json  derivation.exp  derivation.json  derivationtext-event.exp  derivationtext-event.json  ex.json  (+42 more)
tools/: OMConverter.hs  Omdoc.hs  Query.hs
tutorial/: Makefile  ProgTutorial.html  ProgTutorial.lhs  Tutorial-solution.html  Tutorial-solution.lhs  Tutorial.css  Tutorial.html  Tutorial.lhs  template.html
(+3002 files in other folders)
