name:                   ideas
version:                1.3
synopsis:               Feedback services for intelligent tutoring systems
homepage:               http://ideas.cs.uu.nl/www/
description:

  ideas provides feedback services to intelligent tutoring systems such as 
  the digital mathematical environment of the Freudenthal Institute, MathDox,
  and Activemath. 

category:               Education
copyright:              (c) 2015
license:                GPL
license-file:           LICENSE.txt
author:                 Bastiaan Heeren, Alex Gerdes, Johan Jeuring
maintainer:             bastiaan.heeren@ou.nl
stability:              provisional
extra-source-files:     CREDITS.txt
build-type:             Simple
cabal-version:          >= 1.8.0.2
tested-with:            GHC == 7.4.1, GHC == 7.6.3, GHC == 7.8.3

source-repository head
  type:     svn
  location: https://ideas.cs.uu.nl/svn/Feedback/trunk/

--------------------------------------------------------------------------------

Library
  ghc-options:       -Wall
  hs-source-dirs:    src
  Build-Depends:     base >= 4.2 && < 5, 
                     QuickCheck >= 2.4.1 && < 2.7, 
                     Diff,
                     containers, 
                     random, 
                     uniplate, 
                     time, 
                     filepath,
                     directory,
                     parsec,
                     wl-pprint,
                     array,
                     mtl == 2.1.*,
                     network < 2.6,
                     exceptions,
                     multipart,
                     bytestring,
                     old-time,
                     old-locale,
                     xhtml

  Exposed-modules:
    Ideas.Common.Algebra.Boolean
    Ideas.Common.Algebra.BooleanLaws
    Ideas.Common.Algebra.Field
    Ideas.Common.Algebra.FieldLaws
    Ideas.Common.Algebra.Group
    Ideas.Common.Algebra.GroupLaws
    Ideas.Common.Algebra.Law
    Ideas.Common.Algebra.SmartGroup
    Ideas.Common.Classes
    Ideas.Common.Context
    Ideas.Common.Derivation
    Ideas.Common.DerivationTree
    Ideas.Common.Environment
    Ideas.Common.Exercise
    Ideas.Common.ExerciseTests
    Ideas.Common.Id
    Ideas.Common.Library
    Ideas.Common.Predicate
    Ideas.Common.Rewriting
    Ideas.Common.Rewriting.AC
    Ideas.Common.Rewriting.Confluence
    Ideas.Common.Rewriting.Difference
    Ideas.Common.Rewriting.RewriteRule
    Ideas.Common.Rewriting.Substitution
    Ideas.Common.Rewriting.Term
    Ideas.Common.Rewriting.Unification
    Ideas.Common.Rule
    Ideas.Common.Rule.Abstract
    Ideas.Common.Rule.EnvironmentMonad
    Ideas.Common.Rule.Parameter
    Ideas.Common.Rule.Recognizer
    Ideas.Common.Rule.Transformation
    Ideas.Common.Strategy
    Ideas.Common.Strategy.Abstract
    Ideas.Common.Strategy.Choice
    Ideas.Common.Strategy.Combinators
    Ideas.Common.Strategy.Configuration
    Ideas.Common.Strategy.Core
    Ideas.Common.Strategy.Derived
    Ideas.Common.Strategy.Location
    Ideas.Common.Strategy.Parsing
    Ideas.Common.Strategy.Process
    Ideas.Common.Strategy.Sequence
    Ideas.Common.Strategy.Traversal
    Ideas.Common.Traversal.Iterator
    Ideas.Common.Traversal.Navigator
    Ideas.Common.Traversal.Tests
    Ideas.Common.Traversal.Utils
    Ideas.Common.Utils
    Ideas.Common.Utils.QuickCheck
    Ideas.Common.Utils.StringRef
    Ideas.Common.Utils.TestSuite
    Ideas.Common.Utils.Uniplate
    Ideas.Common.View
    Ideas.Encoding.DecoderJSON
    Ideas.Encoding.DecoderXML
    Ideas.Encoding.Encoder
    Ideas.Encoding.EncoderHTML
    Ideas.Encoding.EncoderJSON
    Ideas.Encoding.EncoderXML
    Ideas.Encoding.Evaluator
    Ideas.Encoding.LinkManager
    Ideas.Encoding.ModeJSON
    Ideas.Encoding.ModeXML
    Ideas.Encoding.OpenMathSupport
    Ideas.Encoding.RulePresenter
    Ideas.Encoding.RulesInfo
    Ideas.Encoding.StrategyInfo
    Ideas.Main.BlackBoxTests
    Ideas.Main.Default
    Ideas.Main.Documentation
    Ideas.Main.LoggingDatabase
    Ideas.Main.Options
    Ideas.Main.Revision
    Ideas.Service.BasicServices
    Ideas.Service.Diagnose
    Ideas.Service.DomainReasoner
    Ideas.Service.FeedbackScript.Analysis
    Ideas.Service.FeedbackScript.Parser
    Ideas.Service.FeedbackScript.Run
    Ideas.Service.FeedbackScript.Syntax
    Ideas.Service.FeedbackText
    Ideas.Service.ProblemDecomposition
    Ideas.Service.Request
    Ideas.Service.ServiceList
    Ideas.Service.State
    Ideas.Service.Submit
    Ideas.Service.Types
    Ideas.Text.HTML
    Ideas.Text.JSON
    Ideas.Text.OpenMath.Dictionary.Arith1
    Ideas.Text.OpenMath.Dictionary.Calculus1
    Ideas.Text.OpenMath.Dictionary.Fns1
    Ideas.Text.OpenMath.Dictionary.Linalg2
    Ideas.Text.OpenMath.Dictionary.List1
    Ideas.Text.OpenMath.Dictionary.Logic1
    Ideas.Text.OpenMath.Dictionary.Nums1
    Ideas.Text.OpenMath.Dictionary.Quant1
    Ideas.Text.OpenMath.Dictionary.Relation1
    Ideas.Text.OpenMath.Dictionary.Transc1
    Ideas.Text.OpenMath.FMP
    Ideas.Text.OpenMath.Object
    Ideas.Text.OpenMath.Symbol
    Ideas.Text.OpenMath.Tests
    Ideas.Text.Parsing
    Ideas.Text.UTF8
    Ideas.Text.XML
    Ideas.Text.XML.Document
    Ideas.Text.XML.Interface
    Ideas.Text.XML.Parser
    Ideas.Text.XML.Unicode

  Other-modules:
    Network.CGI
    Network.CGI.Accept
    Network.CGI.Compat
    Network.CGI.Cookie
    Network.CGI.Monad
    Network.CGI.Protocol

--------------------------------------------------------------------------------

