name:                   ideas
version:                1.4
synopsis:               Feedback services for intelligent tutoring systems
homepage:               http://ideas.cs.uu.nl/www/
description:

  Ideas (Interactive Domain-specific Exercise Assistants) is a joint research 
  project between the Open University of the Netherlands and Utrecht 
  University. The project's goal is to use software and compiler technology to 
  build state-of-the-art components for intelligent tutoring systems (ITS) and 
  learning environments. The 'ideas' software package provides a generic 
  framework for constructing the expert knowledge module (also known as a 
  domain reasoner) for an ITS or learning environment. Domain knowledge is 
  offered as a set of feedback services that are used by external tools such 
  as the digital mathematical environment (DME), MathDox, and the Math-Bridge 
  system. We have developed several domain reasoners based on this framework, 
  including reasoners for mathematics, linear algebra, logic, learning Haskell 
  (the Ask-Elle programming tutor) and evaluating Haskell expressions, and for 
  practicing communication skills (the serious game Communicate!).

category:               Education
copyright:              (c) 2015
license:                Apache-2.0
license-file:           LICENSE.txt
author:                 Bastiaan Heeren, Alex Gerdes, Johan Jeuring
maintainer:             bastiaan.heeren@ou.nl
stability:              provisional
extra-source-files:     NOTICE.txt, CHANGELOG.txt
build-type:             Simple
cabal-version:          >= 1.8.0.2
tested-with:            GHC == 7.4.1, GHC == 7.8.3, GHC == 7.8.4

source-repository head
  type:     svn
  location: https://ideas.cs.uu.nl/svn/Feedback/trunk/

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

flag logging
  description: enable support for logging interactions to a sqlite3 database
  default: False

--------------------------------------------------------------------------------

Library
  if flag(logging) {
    cpp-options:     -DDB
    Build-Depends:   HDBC, HDBC-sqlite3
  }

  ghc-options:       -Wall
  hs-source-dirs:    src
  Build-Depends:     base >= 4.2 && < 5, 
                     mtl == 2.1.*,
                     QuickCheck >= 2.4.1 && < 2.7, 
                     Diff,
                     containers, 
                     random, 
                     uniplate, 
                     time, 
                     filepath,
                     directory,
                     parsec,
                     wl-pprint,
                     array,
                     exceptions,
                     multipart,
                     bytestring,
                     old-time,
                     old-locale,
                     xhtml

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network < 2.6

  Exposed-modules:
    Ideas.Common.Algebra.Boolean
    Ideas.Common.Algebra.BooleanLaws
    Ideas.Common.Algebra.Field
    Ideas.Common.Algebra.FieldLaws
    Ideas.Common.Algebra.Group
    Ideas.Common.Algebra.GroupLaws
    Ideas.Common.Algebra.Law
    Ideas.Common.Algebra.SmartGroup
    Ideas.Common.Classes
    Ideas.Common.Context
    Ideas.Common.CyclicTree
    Ideas.Common.Derivation
    Ideas.Common.DerivationTree
    Ideas.Common.Environment
    Ideas.Common.Exercise
    Ideas.Common.ExerciseTests
    Ideas.Common.Id
    Ideas.Common.Library
    Ideas.Common.Predicate
    Ideas.Common.Rewriting
    Ideas.Common.Rewriting.AC
    Ideas.Common.Rewriting.Confluence
    Ideas.Common.Rewriting.Difference
    Ideas.Common.Rewriting.RewriteRule
    Ideas.Common.Rewriting.Substitution
    Ideas.Common.Rewriting.Term
    Ideas.Common.Rewriting.Unification
    Ideas.Common.Rule
    Ideas.Common.Rule.Abstract
    Ideas.Common.Rule.EnvironmentMonad
    Ideas.Common.Rule.Parameter
    Ideas.Common.Rule.Recognizer
    Ideas.Common.Rule.Transformation
    Ideas.Common.Strategy
    Ideas.Common.Strategy.Abstract
    Ideas.Common.Strategy.Choice
    Ideas.Common.Strategy.Combinators
    Ideas.Common.Strategy.Configuration
    Ideas.Common.Strategy.Derived
    Ideas.Common.Strategy.Legacy
    Ideas.Common.Strategy.Location
    Ideas.Common.Strategy.Prefix
    Ideas.Common.Strategy.Process
    Ideas.Common.Strategy.Sequence
    Ideas.Common.Strategy.StrategyTree
    Ideas.Common.Strategy.Symbol
    Ideas.Common.Strategy.Traversal
    Ideas.Common.Traversal.Iterator
    Ideas.Common.Traversal.Navigator
    Ideas.Common.Traversal.Tests
    Ideas.Common.Traversal.Utils
    Ideas.Common.Utils
    Ideas.Common.Utils.QuickCheck
    Ideas.Common.Utils.StringRef
    Ideas.Common.Utils.TestSuite
    Ideas.Common.Utils.Uniplate
    Ideas.Common.View
    Ideas.Encoding.DecoderJSON
    Ideas.Encoding.DecoderXML
    Ideas.Encoding.Encoder
    Ideas.Encoding.EncoderHTML
    Ideas.Encoding.EncoderJSON
    Ideas.Encoding.EncoderXML
    Ideas.Encoding.Evaluator
    Ideas.Encoding.LinkManager
    Ideas.Encoding.ModeJSON
    Ideas.Encoding.ModeXML
    Ideas.Encoding.OpenMathSupport
    Ideas.Encoding.RulePresenter
    Ideas.Encoding.RulesInfo
    Ideas.Encoding.StrategyInfo
    Ideas.Main.BlackBoxTests
    Ideas.Main.Default
    Ideas.Main.Documentation
    Ideas.Main.Logging
    Ideas.Main.Options
    Ideas.Main.Revision
    Ideas.Service.BasicServices
    Ideas.Service.Diagnose
    Ideas.Service.DomainReasoner
    Ideas.Service.FeedbackScript.Analysis
    Ideas.Service.FeedbackScript.Parser
    Ideas.Service.FeedbackScript.Run
    Ideas.Service.FeedbackScript.Syntax
    Ideas.Service.FeedbackText
    Ideas.Service.ProblemDecomposition
    Ideas.Service.Request
    Ideas.Service.ServiceList
    Ideas.Service.State
    Ideas.Service.Submit
    Ideas.Service.Types
    Ideas.Text.HTML
    Ideas.Text.JSON
    Ideas.Text.OpenMath.Dictionary.Arith1
    Ideas.Text.OpenMath.Dictionary.Calculus1
    Ideas.Text.OpenMath.Dictionary.Fns1
    Ideas.Text.OpenMath.Dictionary.Linalg2
    Ideas.Text.OpenMath.Dictionary.List1
    Ideas.Text.OpenMath.Dictionary.Logic1
    Ideas.Text.OpenMath.Dictionary.Nums1
    Ideas.Text.OpenMath.Dictionary.Quant1
    Ideas.Text.OpenMath.Dictionary.Relation1
    Ideas.Text.OpenMath.Dictionary.Transc1
    Ideas.Text.OpenMath.FMP
    Ideas.Text.OpenMath.Object
    Ideas.Text.OpenMath.Symbol
    Ideas.Text.OpenMath.Tests
    Ideas.Text.Parsing
    Ideas.Text.UTF8
    Ideas.Text.XML
    Ideas.Text.XML.Document
    Ideas.Text.XML.Interface
    Ideas.Text.XML.Parser
    Ideas.Text.XML.Unicode

  Other-modules:
    Network.CGI
    Network.CGI.Accept
    Network.CGI.Compat
    Network.CGI.Cookie
    Network.CGI.Monad
    Network.CGI.Protocol

--------------------------------------------------------------------------------

