name:                   ideas
version:                1.6
synopsis:               Feedback services for intelligent tutoring systems
homepage:               http://ideas.cs.uu.nl/www/
description:

  Ideas (Interactive Domain-specific Exercise Assistants) is a joint research 
  project between the Open University of the Netherlands and Utrecht 
  University. The project's goal is to use software and compiler technology to 
  build state-of-the-art components for intelligent tutoring systems (ITS) and 
  learning environments. The 'ideas' software package provides a generic 
  framework for constructing the expert knowledge module (also known as a 
  domain reasoner) for an ITS or learning environment. Domain knowledge is 
  offered as a set of feedback services that are used by external tools such 
  as the digital mathematical environment (DME), MathDox, and the Math-Bridge 
  system. We have developed several domain reasoners based on this framework, 
  including reasoners for mathematics, linear algebra, logic, learning Haskell 
  (the Ask-Elle programming tutor) and evaluating Haskell expressions, and for 
  practicing communication skills (the serious game Communicate!).

category:               Education
copyright:              (c) 2016
license:                Apache-2.0
license-file:           LICENSE.txt
author:                 Bastiaan Heeren, Alex Gerdes, Johan Jeuring
maintainer:             bastiaan.heeren@ou.nl
stability:              provisional
extra-source-files:     NOTICE.txt, CHANGELOG.txt
build-type:             Simple
cabal-version:          >= 1.8.0.2
tested-with:            GHC == 7.10.3

source-repository head
  type:     git
  location: https://github.com/ideas-edu/ideas.git

flag logging
  description: enable support for logging interactions to a sqlite3 database
  default: False

--------------------------------------------------------------------------------

Library
  if flag(logging) {
    cpp-options:     -DDB
    Build-Depends:   HDBC, HDBC-sqlite3
  }

  ghc-options:       -Wall
  hs-source-dirs:    src
  Build-Depends:     
     base >= 4.8 && < 5,
     cgi >= 3001.3.0.0,
     QuickCheck >= 2.8,
     Diff,
     containers,
     directory, 
     filepath, 
     parsec, 
     random,
     time, 
     uniplate, 
     wl-pprint

  Exposed-modules:
    Ideas.Common.Classes
    Ideas.Common.Context
    Ideas.Common.Derivation
    Ideas.Common.DerivationTree
    Ideas.Common.Environment
    Ideas.Common.Exercise
    Ideas.Common.ExerciseTests
    Ideas.Common.Id
    Ideas.Common.Library
    Ideas.Common.Predicate
    Ideas.Common.Rewriting
    Ideas.Common.Rewriting.AC
    Ideas.Common.Rewriting.Confluence
    Ideas.Common.Rewriting.Difference
    Ideas.Common.Rewriting.RewriteRule
    Ideas.Common.Rewriting.Substitution
    Ideas.Common.Rewriting.Term
    Ideas.Common.Rewriting.Unification
    Ideas.Common.Rule
    Ideas.Common.Rule.Abstract
    Ideas.Common.Rule.Parameter
    Ideas.Common.Rule.Recognizer
    Ideas.Common.Rule.Transformation
    Ideas.Common.Strategy
    Ideas.Common.Strategy.Abstract
    Ideas.Common.Strategy.Choice
    Ideas.Common.Strategy.Combinators
    Ideas.Common.Strategy.Configuration
    Ideas.Common.Strategy.CyclicTree
    Ideas.Common.Strategy.Derived
    Ideas.Common.Strategy.Legacy
    Ideas.Common.Strategy.Location
    Ideas.Common.Strategy.Prefix
    Ideas.Common.Strategy.Process
    Ideas.Common.Strategy.Sequence
    Ideas.Common.Strategy.StrategyTree
    Ideas.Common.Strategy.Symbol
    Ideas.Common.Strategy.Traversal
    Ideas.Common.Traversal.Iterator
    Ideas.Common.Traversal.Navigator
    Ideas.Common.Traversal.Tests
    Ideas.Common.Traversal.Utils
    Ideas.Common.View
    Ideas.Encoding.DecoderJSON
    Ideas.Encoding.DecoderXML
    Ideas.Encoding.Encoder
    Ideas.Encoding.EncoderHTML
    Ideas.Encoding.EncoderJSON
    Ideas.Encoding.EncoderXML
    Ideas.Encoding.Evaluator
    Ideas.Encoding.LinkManager
    Ideas.Encoding.Logging
    Ideas.Encoding.ModeJSON
    Ideas.Encoding.ModeXML
    Ideas.Encoding.OpenMathSupport
    Ideas.Encoding.Options
    Ideas.Encoding.Request
    Ideas.Encoding.RulePresenter
    Ideas.Encoding.RulesInfo
    Ideas.Encoding.StrategyInfo
    Ideas.Main.CmdLineOptions
    Ideas.Main.Default
    Ideas.Main.Revision
    Ideas.Service.BasicServices
    Ideas.Service.Diagnose
    Ideas.Service.DomainReasoner
    Ideas.Service.FeedbackScript.Analysis
    Ideas.Service.FeedbackScript.Parser
    Ideas.Service.FeedbackScript.Run
    Ideas.Service.FeedbackScript.Syntax
    Ideas.Service.FeedbackText
    Ideas.Service.ProblemDecomposition
    Ideas.Service.ServiceList
    Ideas.Service.State
    Ideas.Service.Submit
    Ideas.Service.Types
    Ideas.Text.HTML
    Ideas.Text.JSON
    Ideas.Text.Latex
    Ideas.Text.OpenMath.Dictionary.Arith1
    Ideas.Text.OpenMath.Dictionary.Calculus1
    Ideas.Text.OpenMath.Dictionary.Fns1
    Ideas.Text.OpenMath.Dictionary.Linalg2
    Ideas.Text.OpenMath.Dictionary.List1
    Ideas.Text.OpenMath.Dictionary.Logic1
    Ideas.Text.OpenMath.Dictionary.Nums1
    Ideas.Text.OpenMath.Dictionary.Quant1
    Ideas.Text.OpenMath.Dictionary.Relation1
    Ideas.Text.OpenMath.Dictionary.Transc1
    Ideas.Text.OpenMath.FMP
    Ideas.Text.OpenMath.Object
    Ideas.Text.OpenMath.Symbol
    Ideas.Text.OpenMath.Tests
    Ideas.Text.UTF8
    Ideas.Text.XML
    Ideas.Text.XML.Document
    Ideas.Text.XML.Interface
    Ideas.Text.XML.Parser
    Ideas.Text.XML.Unicode
    Ideas.Utils.BlackBoxTests
    Ideas.Utils.Parsing
    Ideas.Utils.Prelude
    Ideas.Utils.QuickCheck
    Ideas.Utils.StringRef
    Ideas.Utils.TestSuite
    Ideas.Utils.Typeable
    Ideas.Utils.Uniplate

--------------------------------------------------------------------------------

